--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "gen-difference",
-  "version": "1.0.0",
+  "name": "gen-diff",
+  "version": "1.0.1",
   "description": "my second project-gendiff",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "gendiff": "dist/bin/gendiff.js"
   },
   "files": [
     "dist"
   ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/valyaevadaria/project-lvl2-s475.git"
