--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gen-diff",
-  "version": "1.0.1",
+  "name": "new-gendiff",
+  "version": "1.0.5",
   "description": "my second project-gendiff",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
