--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-gendiff",
-  "version": "1.0.9",
+  "version": "1.0.27",
   "description": "my second project-gendiff",
   "bin": {
     "gendiff": "dist/bin/gendiff.js"
@@ -9,9 +9,10 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -32,10 +33,12 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-plugin-import": "^2.17.2",
+    "jest": "^24.8.0"
   },
   "dependencies": {
-    "commander": "^2.20.0"
+    "commander": "^2.20.0",
+    "lodash": "^4.17.11"
   },
   "keywords": [
     "my",
